// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No options - spec 1`] = `
"<div class=
\\"pe-notification pe-dark-tone pe-notification--horizontal\\">
  <div class=\\"pe-notification__content\\"></div>
</div>
"
`;

exports[`Option: class - spec 1`] = `
"<div class=
\\"pe-notification pe-dark-tone pe-notification--horizontal class-x\\">
  <div class=\\"pe-notification__content\\"></div>
</div>
"
`;

exports[`Option: className - spec 1`] = `
"<div class=
\\"pe-notification pe-dark-tone pe-notification--horizontal className-x\\">
<div class=\\"pe-notification__content\\"></div>
</div>
"
`;

exports[`Option: element - spec 1`] = `
"<a class=
\\"pe-notification pe-dark-tone pe-notification--horizontal\\">
<div class=\\"pe-notification__content\\"></div></a>
"
`;

exports[`Option: id - spec 1`] = `
"<div id=\\"id-x\\" class=
\\"pe-notification pe-dark-tone pe-notification--horizontal\\">
  <div class=\\"pe-notification__content\\"></div>
</div>
"
`;
